--- a/app/styles/_variables.less
+++ b/app/styles/_variables.less
@@ -95,6 +95,7 @@
 @scrollbar-track-inverse: @sidebar-os-border-color;
 @scrollbar-track-inverse-alt: rgba(255,255,255,.1);
 @scrollbar-width: 14px;
+@scrollbar-width-log-viewer: 17px;
 @status-bg-color: #E6ECF1;
 @status-border-color: #BFCEDB;
 @tileHeadingIconFontSize: 33px;
